--- a/index.html
+++ b/index.html
@@ -13,12 +13,8 @@
     <h2>Floor Planner</h2>
     <button id="feedbackBtn" class="feedback-btn">Feedback</button>
   </header>
-
-  <!-- Pages Wrapper -->
-  <main id="pages">
+  <main>
     
-    <!-- Home / Designer Page -->
-    <div id="home" class="page active">
       <div class="container">
         <form id="designForm">
           <div class="input-row">
@@ -57,10 +53,7 @@
           <pre id="planOutput"></pre>
         </section> 
       </div> 
-    </div>
-
-    <!-- Feedback Form Page -->
-    <div id="feedback" class="page">
+    
       <div class="feedback-container" id="feedbackFormContainer">
         <button class="feedback-x" id="closeFeedbackTop">×</button>
         <h2>Feedback</h2>
@@ -68,17 +61,13 @@
         <p id="feedbackError" class="feedback-error"></p>
         <button id="submitFeedback" class="feedback-submit">Submit</button>
       </div>
-    </div>
 
-    <!-- Feedback Thank You Page -->
-    <div id="feedbackThankYou" class="page">
       <div class="feedback-container" id="thankYouContainer">
         <div class="success-icon">✔</div>
         <h2>Thank You!</h2>
         <p>Your feedback helps us improve our services.</p>
         <button id="closeFeedback" class="feedback-close">Close</button>
       </div>
-    </div>
 
   </main>
 
