--- a/index.html
+++ b/index.html
@@ -53,7 +53,9 @@
           <pre id="planOutput"></pre>
         </section> 
       </div> 
-    
+
+
+    <section id="feedbackSection" class="feedback-section">
       <div class="feedback-container" id="feedbackFormContainer">
         <button class="feedback-x" id="closeFeedbackTop">×</button>
         <h2>Feedback</h2>
@@ -68,6 +70,7 @@
         <p>Your feedback helps us improve our services.</p>
         <button id="closeFeedback" class="feedback-close">Close</button>
       </div>
+    </section>
 
   </main>
 
