--- a/feedback.html
+++ b/feedback.html
@@ -54,16 +54,15 @@
     }
 
     main {
-      padding: 2em 1em;
+      padding: 1em;
       background: #fff;
-      border-radius: 12px;
     }
 
     h3 {
       color: #007bff;
-      margin-top: 0;
       text-align: center;
-      margin: 0 0 1em;
+      margin: 0 0 0.5em;
+      font-size: 1.5rem;
     }
 
     textarea {
