--- a/index.html
+++ b/index.html
@@ -9,10 +9,9 @@
 </head>
 
 <body>
-  <header>
-    <h2>Floor Planner</h2>
-    <a href="feedback.html"><button class="feedback-btn">Feedback</button></a>
-  </header>
+<header>
+<h2>Floor Planner</h2>
+</header>
 
   <main>
     <div class="container">
@@ -55,9 +54,14 @@
   </main>
 
   <footer>
-    <p>© 2025 Floor Planner. All rights reserved.</p>
-  </footer>
+  <div class="footer-buttons">
+    <a href="area-convert.html" class="feedback-btn">Area Converter</a>
+    <a href="feedback.html" class="feedback-btn">Feedback</a>
+  </div>
+  <p>© 2025 Floor Planner. All rights reserved.</p>
+</footer>
 
   <script src="script.js"></script>
+
 </body>
 </html>
