--- a/area-convert.html
+++ b/area-convert.html
@@ -203,7 +203,7 @@
     </div>
 
 <!-- Result -->
-<div id="result" class="result"></div>
+<div id="result" class="result">Answer</div>
   </main>
 
   <footer>
