--- a/area-convert.html
+++ b/area-convert.html
@@ -141,7 +141,7 @@
   <main>
     <h4>Convert areas easily by putting values</h4>
 
-    <label>Convert From:</label>
+    <label>From:</label>
     <select id="fromUnit" onchange="showInputFields()">
       <option value="">-- Select --</option>
       <option value="dimensions">Width × Length</option>
@@ -186,7 +186,7 @@
   </div>
 </div>
 
-    <label>Convert To:</label>
+    <label>To:</label>
     <select id="toUnit">
       <option value="sqft">Square Feet</option>
       <option value="sqm">Square Meters</option>
