--- a/area-convert.html
+++ b/area-convert.html
@@ -27,10 +27,6 @@
       font-size: 1.5rem;
     }
 
-    header p {
-      font-size: 10px;
-    }
-
     .close-x {
       background: transparent;
       border: none;
@@ -135,7 +131,7 @@
 
 <header>
 <button class="close-x" onclick="window.location.href='index.html'"><i class="fa fa-arrow-left"></i></button>
-    <h2>Area Converter</h2> <p>(by Floor Planner)</p>
+    <h2>Area Converter</h2>
 </header>
 
   <main>
