--- a/feedback.html
+++ b/feedback.html
@@ -15,18 +15,17 @@
     }
 
     header {
-      background: #007bff;
-      color: white;
-      padding: 0.6em 1em;
-      display: ruby;
-      justify-content: space-between;
-      align-items: center;
-      position: relative;
+    background: #007bff;
+    color: white;
+    padding: 0.6em 1em;
+    display: flex;
+    align-items: center;
+    position: relative;
     }
 
     header h2 {
-      margin: 0 1em;
-    }
+      font-size: 1.5rem;
+      margin: 0 44% 0 0;
 
   button, a, input, textarea, select {
  outline: none;
@@ -39,18 +38,11 @@
     }
 
     .close-x {
-      display: contents;
-      right: 15px;
-      top: 50%;
-      transform: translateY(-50%);
       background: transparent;
       border: none;
-      font-size: 1rem;
       color: white;
+      font-size: 1rem;
       cursor: pointer;
-      line-height: 1;
-      border-radius: 50%;
-      transition: background 0.2s;
     }
 
     main {
