--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
 
 <body>
 <header>
-<h2>Floor Planner</h2>
+  <img src="fplogo.png" alt="Logo" class="header-logo">
+  <h2>Floor Planner</h2>
 </header>
 
   <main>
