--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Atomic Home Designer Tool</title>
+  <title>Floor Planner</title>
   <link rel="stylesheet" href="style.css" />
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"/>
 </head>
@@ -13,6 +13,7 @@
   <img src="fplogo.png" alt="Logo" class="header-logo">
   <h2>Floor Planner</h2>
 </header>
+
 
   <main>
     <div class="container">
@@ -47,8 +48,10 @@
         </div>
       </form>
 
+      <hr style="border: 1px solid #ccc; margin: 0.4em 0;"/>
+
       <section class="plan-info-section">
-        <h4>Plan Info:</h4>
+        <h4>Plan details:</h4>
         <pre id="planOutput"></pre>
       </section>
     </div>
