--- a/area-convert.html
+++ b/area-convert.html
@@ -131,14 +131,14 @@
     <select id="fromUnit" onchange="showInputFields()">
       <option value="">-- Select --</option>
       <option value="dimensions">Width × Length</option>
-      <option value="sqft">Square Feet</option>
-      <option value="sqm">Square Meters</option>
-      <option value="sqyd">Square Yards</option>
-      <option value="sqin">Square Inches</option>
-      <option value="sqcm">Square Centimeters</option>
-      <option value="sqmm">Square Millimeters</option>
-      <option value="acre">Acres</option>
-      <option value="hectare">Hectares</option>
+      <option value="sqft">Square Feet (ft²) </option>
+      <option value="sqm">Square Meters (m²)</option>
+      <option value="sqyd">Square Yards (yd²)</option>
+      <option value="sqin">Square Inches (in²)</option>
+      <option value="sqcm">Square Centimeters (cm²)</option>
+      <option value="sqmm">Square Millimeters (mm²)</option>
+      <option value="acre">Acres (ac)</option>
+      <option value="hectare">Hectares (ha)</option>
     </select>
 
     <!-- Example of Dimensions Input Row -->
@@ -154,12 +154,12 @@
   <div class="input-row">
     <label for="dimensionUnit">Unit:</label>
     <select id="dimensionUnit">
-      <option value="feet">Feet</option>
-      <option value="meters">Meters</option>
-      <option value="yards">Yards</option>
-      <option value="inches">Inches</option>
-      <option value="cm">Centimeters</option>
-      <option value="mm">Millimeters</option>
+      <option value="feet">Feet (ft)</option>
+      <option value="meters">Meters (m)</option>
+      <option value="yards">Yards (yd)</option>
+      <option value="inches">Inches (in)</option>
+      <option value="cm">Centimeters (cm)</option>
+      <option value="mm">Millimeters (mm)</option>
     </select>
   </div>
 </div>
@@ -174,14 +174,14 @@
 
     <label>Convert To:</label>
     <select id="toUnit">
-      <option value="sqft">Square Feet</option>
-      <option value="sqm">Square Meters</option>
-      <option value="sqyd">Square Yards</option>
-      <option value="sqin">Square Inches</option>
-      <option value="sqcm">Square Centimeters</option>
-      <option value="sqmm">Square Millimeters</option>
-      <option value="acre">Acres</option>
-      <option value="hectare">Hectares</option>
+      <option value="sqft">Square Feet (ft²)</option>
+      <option value="sqm">Square Meters (m²)</option>
+      <option value="sqyd">Square Yards (yd²)</option>
+      <option value="sqin">Square Inches (in²)</option>
+      <option value="sqcm">Square Centimeters (cm²)</option>
+      <option value="sqmm">Square Millimeters (mm²)</option>
+      <option value="acre">Acres (ac)</option>
+      <option value="hectare">Hectares (ha)</option>
     </select>
 
     <div class="button-group">
