--- a/area-convert.html
+++ b/area-convert.html
@@ -145,11 +145,11 @@
 <div id="dimensionsInputs" class="hidden">
   <div class="input-row">
     <label for="width">Width:</label>
-    <input type="number" placeholder="Width">
+    <input type="number" id="width" placeholder="Width">
   </div>
   <div class="input-row">
     <label for="length">Length:</label>
-    <input type="number" placeholder="Length">
+    <input type="number" id="length" placeholder="Length">
   </div>
   <div class="input-row">
     <label for="dimensionUnit">Unit:</label>
