--- a/feedback.html
+++ b/feedback.html
@@ -120,7 +120,7 @@
     <div id="thankYouMessage" class="thank-you">
       <div class="success-icon">✔</div>
       <h3>Thank You!</h3>
-      <p style="margin: 1em 0 2em 0">Your feedback helps us improve our services.</p>
+      <p style="margin: 1em 0 2em 0">Your feedback helps us to improve our services.</p>
       <a href="index.html"><button class="feedback-close">Close</button></a>
     </div>
   </main>
