--- a/index.html
+++ b/index.html
@@ -61,6 +61,7 @@
   <div class="footer-buttons">
     <a href="area-convert.html" class="feedback-btn">Area Converter</a>
     <a href="feedback.html" class="feedback-btn">Feedback</a>
+    <button id="shareBtn" class="feedback-btn">Share</button>
   </div>
   <p>© 2025 Floor Planner. All rights reserved.</p>
 </footer>
