--- a/area-convert.html
+++ b/area-convert.html
@@ -196,6 +196,7 @@
   <div class="footer-buttons">
     <a href="index.html" class="feedback-btn">Floor Planner</a>
     <a href="feedback.html" class="feedback-btn">Feedback</a>
+    <button id="shareBtn" class="feedback-btn">Share</button>
   </div>
   <p>© 2025 Floor Planner. All rights reserved.</p>
 </footer>
@@ -279,6 +280,26 @@
       const converted = areaSqMeters * fromSqMeters[toUnit];
       showResult(`${converted.toLocaleString(undefined, { maximumFractionDigits: 4 })} ${unitSymbols[toUnit]}`);
     }
+
+
+    const shareBtn = document.getElementById('shareBtn');
+
+  shareBtn.addEventListener('click', async () => {
+    if (navigator.share) {
+      try {
+        await navigator.share({
+          title: 'Floor Planner',
+          text: 'Check out this awesome Floor Planner tool!',
+          url: window.location.href
+        });
+        console.log('Shared successfully');
+      } catch (err) {
+        console.error('Error sharing:', err);
+      }
+    } else {
+      alert('Your browser does not support the Web Share API.');
+    }
+  });
   </script>
 
 </body>
