--- a/area-convert.html
+++ b/area-convert.html
@@ -287,8 +287,8 @@
     if (navigator.share) {
       try {
         await navigator.share({
-          title: 'Floor Planner',
-          text: 'Check out this awesome Floor Planner tool!',
+          title: 'Area Converter',
+          text: 'Convert area in few clicks',
           url: window.location.href
         });
         console.log('Shared successfully');
