--- a/area-convert.html
+++ b/area-convert.html
@@ -279,7 +279,7 @@
       try {
         await navigator.share({
           title: 'Floor Planner',
-          text: 'Check out this awesome Floor Planner tool!',
+          text: 'From plot to plan in minutes',
           url: window.location.href
         });
         console.log('Shared successfully');
