--- a/privacy.html
+++ b/privacy.html
@@ -10,7 +10,7 @@
 <body>
   <header>
     <div class="header-left">
-      <a href="intro.html" class="menu-btn" aria-label="Back">
+      <a href="index.html" class="menu-btn" aria-label="Back">
         <i class="fas fa-arrow-left"></i>
       </a>
       <h3>Privacy Policy</h3>
