--- a/area-convert.html
+++ b/area-convert.html
@@ -27,15 +27,8 @@
       background: #fff;
     }
 
-    h3 {
-      color: #007bff;
-      text-align: center;
-      margin-bottom: 1em;
-      font-size: 1.5rem;
-    }
-
     h4 {
-      color: #007bff;
+      color: #0066ff;
       text-align: center;
       margin-bottom: 1.5em;
     }
@@ -71,7 +64,7 @@
       font-size: 1.1em;
       cursor: pointer;
       transition: 0.3s;
-      background: #007bff;
+      background: #0066ff;
       color: white;
     }
 
@@ -80,7 +73,7 @@
       padding: 12px;
       font-size: 1.4em;
       text-align: center;
-      color: #007bff;
+      color: #0066ff;
       background: #f4f4fa;
       border-radius: 7px;
     }
@@ -122,9 +115,8 @@
 
 <header>
 <button class="close-x" onclick="window.location.href='index.html'"><i class="fa fa-arrow-left"></i></button>
-    <h2>Area Converter</h2>
+    <h3>Area Converter</h3>
 </header>
-
   <main>
 
     <label>Convert From:</label>
@@ -290,7 +282,6 @@
       alert('Your browser does not support the Web Share API.');
     }
   });
-  
   </script>
 
 </body>
