--- a/feedback.html
+++ b/feedback.html
@@ -38,7 +38,7 @@
     }
 
     h3 {
-      color: #007bff;
+      color: #0066ff;
       text-align: center;
       margin: 0 0 0.5em;
       font-size: 1.5rem;
@@ -57,7 +57,7 @@
       height: 30vh;
     }
     textarea:focus {
-      border-color: #007bff;
+      border-color: #0066ff;
     }
 
     .feedback-error {
@@ -70,7 +70,7 @@
 
     .feedback-submit,
     .feedback-close {
-      background: #007bff;
+      background: #0066ff;
       color: white;
       border: none;
       padding: 12px 0;
@@ -104,7 +104,7 @@
 
   <header>
     <button class="close-x" onclick="window.location.href='index.html'"> <i class="fa fa-arrow-left"></i> </button>
-    <h2>Floor Planner</h2>
+    <h4>Floor Planner</h4>
   </header>
 
   <main>
