--- a/privacy.html
+++ b/privacy.html
@@ -6,47 +6,85 @@
   <title>Privacy Policy - Space Explorer</title>
   <link rel="stylesheet" href="style.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
+  <style>
+    body {
+      margin: 0;
+      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+      background: #fff;
+      color: #333;
+    }
+
+    .close-x {
+      background: transparent;
+      border: none;
+      color: #fff;
+      font-size: 1.2rem;
+      cursor: pointer;
+    }
+
+    .content-page {
+      background: #fff;
+      padding: 0.6em;
+    }
+
+    .content-page p, 
+    .content-page li {
+      margin: 8px 0;
+      text-align: justify;
+    }
+
+    ul {
+      padding-left: 20px;
+    }
+  </style>
 </head>
+
 <body>
   <header>
-    <div class="header-left">
-      <a href="index.html" class="menu-btn" aria-label="Back">
-        <i class="fas fa-arrow-left"></i>
-      </a>
-      <h3>Privacy Policy</h3>
-    </div>
+    <button class="close-x" onclick="window.location.href='index.html'">
+      <i class="fa fa-arrow-left"></i>
+    </button>
+    <h4>Privacy Policy</h4>
   </header>
 
   <main class="content-page">
-    <h2>Privacy Policy</h2>
     <p><strong>Last Updated:</strong> 20 Aug 2025</p>
 
-    <p>Your privacy is important to us at <b>Space Explorer</b>. This Privacy Policy explains how we collect, use, and protect your data.</p>
+    <p>Your privacy is important to us at Floor Planner. This Privacy Policy explains how we collect, use, and protect your data.</p>
+<br>
 
-    <h3>1. Information We Collect</h3>
+    <h4>1. Information We Collect</h4>
     <ul>
       <li>Personal information you provide (name, email, etc.).</li>
       <li>Usage data (pages visited, features used).</li>
       <li>Cookies for performance and experience improvements.</li>
     </ul>
+<br>
 
-    <h3>2. How We Use Information</h3>
+    <h4>2. How We Use Information</h4>
     <p>We use your data to provide services, improve features, and keep the platform secure.</p>
+<br>
 
-    <h3>3. Sharing of Information</h3>
+    <h4>3. Sharing of Information</h4>
     <p>We never sell your personal information. We may share with trusted partners or if required by law.</p>
+<br>
 
-    <h3>4. Security</h3>
+    <h4>4. Security</h4>
     <p>We use industry practices to safeguard your data but cannot guarantee absolute protection.</p>
+<br>
 
-    <h3>5. Children’s Privacy</h3>
+    <h4>5. Children’s Privacy</h4>
     <p>Our platform is not directed at children under 13. We do not knowingly collect data from children.</p>
+<br>
 
-    <h3>6. Updates</h3>
+    <h4>6. Updates</h4>
     <p>This Privacy Policy may change. Updates will be posted on this page.</p>
+<br>
 
-    <h3>7. Contact</h3>
-    <p>Questions? Reach us at: <b>privacy@spaceexplorer.com</b></p>
+    <h4>7. Contact</h4>
+    <p>Questions? Reach us at: <b>privacy@floorplanner.com</b></p>
+<br>
+
   </main>
 
   <footer>
