--- a/terms.html
+++ b/terms.html
@@ -6,44 +6,80 @@
   <title>Terms of Use - Space Explorer</title>
   <link rel="stylesheet" href="style.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
+  <style>
+    body {
+      margin: 0;
+      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+      background: #fff;
+      color: #333;
+    }
+
+    .close-x {
+      background: transparent;
+      border: none;
+      color: #fff;
+      font-size: 1.2rem;
+      cursor: pointer;
+    }
+
+    .content-page {
+      background: #fff;
+      padding: 0.6em;
+    }
+
+    .content-page p, 
+    .content-page li {
+      margin: 8px 0;
+      text-align: justify;
+    }
+
+    ul {
+      padding-left: 20px;
+    }
+  </style>
 </head>
+
 <body>
   <header>
-    <div class="header-left">
-      <a href="index.html" class="menu-btn" aria-label="Back">
-        <i class="fas fa-arrow-left"></i>
-      </a>
-      <h3>Terms of Use</h3>
-    </div>
+    <button class="close-x" onclick="window.location.href='index.html'">
+      <i class="fa fa-arrow-left"></i>
+    </button>
+    <h4>Terms of use</h4>
   </header>
 
   <main class="content-page">
-    <h2>Terms of Use</h2>
     <p><strong>Last Updated:</strong> 20 Aug 2025</p>
 
-    <p>Welcome to <b>Space Explorer</b>. By accessing or using our app/website, you agree to comply with these Terms of Use.</p>
+    <p>Welcome to Floor Planner. By accessing or using our app/website, you agree to comply with these Terms of Use.</p>
+<br>
 
-    <h3>1. Acceptance of Terms</h3>
+    <h4>1. Acceptance of Terms</h4>
     <p>By using this platform, you acknowledge that you have read and agree to these Terms. If you do not agree, please stop using the platform.</p>
+<br>
 
-    <h3>2. Usage Rules</h3>
+    <h4>2. Usage Rules</h4>
     <ul>
       <li>Do not misuse or attempt to harm the platform.</li>
       <li>Do not copy, resell, or distribute content without permission.</li>
       <li>Use the platform only for lawful purposes.</li>
     </ul>
+<br>
 
-    <h3>3. Intellectual Property</h3>
-    <p>All content, code, and design are property of Space Explorer or licensed to us. Unauthorized use is prohibited.</p>
+    <h4>3. Intellectual Property</h4>
+    <p>All content, code, and design are property of Floor Planner or licensed to us. Unauthorized use is prohibited.</p>
+<br>
 
-    <h3>4. Limitation of Liability</h3>
+    <h4>4. Limitation of Liability</h4>
     <p>We are not responsible for damages caused by your use of our platform.</p>
+<br>
 
-    <h3>5. Changes</h3>
+    <h4>5. Changes</h4>
     <p>We may update these Terms at any time. Please check this page for updates.</p>
 
-    <h3>6. Contact</h3>
-    <p>If you have questions, contact us at: <b>support@spaceexplorer.com</b></p>
+    <h4>6. Contact</h4>
+    <p>If you have questions, contact us at: <b>support@floorplanner.com</b></p>
+<br>
+
   </main>
 
   <footer>
