--- a/privacy.html
+++ b/privacy.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Privacy Policy - Space Explorer</title>
+  <title>Privacy Policy - Floor Planner</title>
   <link rel="stylesheet" href="style.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
   <style>
@@ -50,39 +50,76 @@
   <main class="content-page">
     <p><strong>Last Updated:</strong> 20 Aug 2025</p>
 
-    <p>Your privacy is important to us at Floor Planner. This Privacy Policy explains how we collect, use, and protect your data.</p>
+    <p>At <b>Floor Planner</b>, your privacy is of the highest importance to us. This Privacy Policy describes the types of information we collect, how we use it, the measures we take to protect it, and your rights regarding your personal data. By using our services, you agree to the practices described in this policy.</p>
 <br>
 
     <h4>1. Information We Collect</h4>
+    <p>We collect different types of information to provide and improve our services:</p>
     <ul>
-      <li>Personal information you provide (name, email, etc.).</li>
-      <li>Usage data (pages visited, features used).</li>
-      <li>Cookies for performance and experience improvements.</li>
+      <li><b>Personal Information</b>: name, email, contact details, account credentials, and payment information (if applicable).</li>
+      <li><b>Usage Information</b>: pages you visit, features you use, time and duration of visits, IP address, browser type, and device details.</li>
+      <li><b>Cookies & Tracking</b>: to improve performance, store preferences, and analyze usage patterns. (You may disable cookies in your browser, but some features may not work properly.)</li>
     </ul>
 <br>
 
     <h4>2. How We Use Information</h4>
-    <p>We use your data to provide services, improve features, and keep the platform secure.</p>
+    <p>We use the collected data for purposes such as:</p>
+    <ul>
+      <li><b>Service Delivery</b>: operating and maintaining our platform.</li>
+      <li><b>Personalization</b>: tailoring your experience and recommendations.</li>
+      <li><b>Improvement</b>: analyzing usage to enhance features.</li>
+      <li><b>Security</b>: detecting and preventing fraud, abuse, and threats.</li>
+      <li><b>Communication</b>: sending updates, responding to inquiries, and providing customer support.</li>
+      <li><b>Legal Compliance</b>: meeting obligations under law and regulations.</li>
+    </ul>
 <br>
 
     <h4>3. Sharing of Information</h4>
-    <p>We never sell your personal information. We may share with trusted partners or if required by law.</p>
+    <p>We respect your privacy and do not sell your personal data. However, we may share information in the following cases:</p>
+    <ul>
+      <li><b>Trusted Partners</b>: with service providers like hosting, analytics, or payment processors.</li>
+      <li><b>Legal Requirements</b>: if required by law, regulation, or government request.</li>
+      <li><b>Business Transfers</b>: in mergers, acquisitions, or sales of assets.</li>
+      <li><b>Consent</b>: with your explicit permission.</li>
+    </ul>
 <br>
 
-    <h4>4. Security</h4>
-    <p>We use industry practices to safeguard your data but cannot guarantee absolute protection.</p>
+    <h4>4. Data Security</h4>
+    <p>We use industry-standard measures such as encryption, secure servers, and regular monitoring to safeguard your information. While we strive to protect your data, no system is completely secure, and we cannot guarantee absolute protection.</p>
 <br>
 
-    <h4>5. Children’s Privacy</h4>
-    <p>Our platform is not directed at children under 13. We do not knowingly collect data from children.</p>
+    <h4>5. Data Retention</h4>
+    <p>We retain personal data only for as long as necessary to fulfill the purposes described in this Privacy Policy, unless required otherwise by law. Data no longer needed is securely deleted or anonymized.</p>
 <br>
 
-    <h4>6. Updates</h4>
-    <p>This Privacy Policy may change. Updates will be posted on this page.</p>
+    <h4>6. Your Rights</h4>
+    <p>Depending on your location, you may have rights including:</p>
+    <ul>
+      <li>Access your data.</li>
+      <li>Correct or update inaccuracies.</li>
+      <li>Request deletion (subject to legal obligations).</li>
+      <li>Restrict or object to processing.</li>
+      <li>Request data portability in a structured format.</li>
+    </ul>
+    <p>To exercise these rights, contact us using the details below.</p>
 <br>
 
-    <h4>7. Contact</h4>
-    <p>Questions? Reach us at: <b>privacy@floorplanner.com</b></p>
+    <h4>7. Children’s Privacy</h4>
+    <p>Our services are not directed to children under 13. We do not knowingly collect data from children. If we discover a child’s data has been provided, we will delete it immediately.</p>
+<br>
+
+    <h4>8. International Data Transfers</h4>
+    <p>If you access our services from outside our hosting country, your data may be transferred internationally in compliance with applicable data protection laws.</p>
+<br>
+
+    <h4>9. Updates to This Policy</h4>
+    <p>We may update this Privacy Policy from time to time. Any changes will be posted on this page with the updated “Last Updated” date. Significant changes may also be communicated via email or notifications.</p>
+<br>
+
+    <h4>10. Contact</h4>
+    <p>If you have questions or concerns regarding this Privacy Policy or our data practices, contact us at:</p>
+    <p><b>Email:</b> privacy@floorplanner.com<br>
+       <b>Address:</b> Floor Planner</p>
 <br>
 
   </main>
