--- a/terms.html
+++ b/terms.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Terms of Use - Space Explorer</title>
+  <title>Terms of Use - Floor Planner</title>
   <link rel="stylesheet" href="style.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
   <style>
@@ -44,40 +44,82 @@
     <button class="close-x" onclick="window.location.href='index.html'">
       <i class="fa fa-arrow-left"></i>
     </button>
-    <h4>Terms of use</h4>
+    <h4>Terms of Use</h4>
   </header>
 
   <main class="content-page">
     <p><strong>Last Updated:</strong> 20 Aug 2025</p>
 
-    <p>Welcome to Floor Planner. By accessing or using our app/website, you agree to comply with these Terms of Use.</p>
+    <p>Welcome to <b>Floor Planner</b> (“we,” “our,” “us”). By accessing, browsing, or using our website, application, or related services (collectively, the “Services”), you agree to be bound by these Terms of Use. Please read them carefully, as they affect your legal rights and obligations.</p>
 <br>
 
     <h4>1. Acceptance of Terms</h4>
-    <p>By using this platform, you acknowledge that you have read and agree to these Terms. If you do not agree, please stop using the platform.</p>
+    <p>By creating an account, accessing our Services, or otherwise using Floor Planner, you acknowledge that you have read, understood, and agreed to these Terms. If you do not agree, you may not access or use our Services.</p>
 <br>
 
-    <h4>2. Usage Rules</h4>
+    <h4>2. Eligibility</h4>
     <ul>
-      <li>Do not misuse or attempt to harm the platform.</li>
-      <li>Do not copy, resell, or distribute content without permission.</li>
-      <li>Use the platform only for lawful purposes.</li>
+      <li>You must be at least 13 years old (or the minimum legal age in your jurisdiction) to use our Services.</li>
+      <li>If you are using the Services on behalf of an organization or entity, you confirm that you are authorized to accept these Terms on its behalf.</li>
     </ul>
 <br>
 
-    <h4>3. Intellectual Property</h4>
-    <p>All content, code, and design are property of Floor Planner or licensed to us. Unauthorized use is prohibited.</p>
+    <h4>3. Use of Services</h4>
+    <p>When using Floor Planner, you agree to:</p>
+    <ul>
+      <li>Use our Services only for lawful, personal, and non-commercial purposes unless authorized.</li>
+      <li>Not misuse, hack, or exploit the platform or attempt to gain unauthorized access.</li>
+      <li>Not upload malicious code, spam, or harmful content.</li>
+      <li>Not disrupt or interfere with the proper functioning of our Services.</li>
+    </ul>
+    <p>We reserve the right to suspend or terminate accounts that violate these rules.</p>
 <br>
 
-    <h4>4. Limitation of Liability</h4>
-    <p>We are not responsible for damages caused by your use of our platform.</p>
+    <h4>4. Account Responsibilities</h4>
+    <ul>
+      <li>You are responsible for maintaining the confidentiality of your account credentials.</li>
+      <li>You agree to notify us immediately if you suspect any unauthorized use of your account.</li>
+      <li>We are not liable for any loss or damages caused by your failure to secure your account.</li>
+    </ul>
 <br>
 
-    <h4>5. Changes</h4>
-    <p>We may update these Terms at any time. Please check this page for updates.</p>
+    <h4>5. Intellectual Property</h4>
+    <p>All content, design, software, and materials provided through Floor Planner are the property of Floor Planner or its licensors. This includes text, graphics, images, software code, layouts, and trademarks. Unauthorized use, reproduction, or distribution is prohibited.</p>
+<br>
 
-    <h4>6. Contact</h4>
-    <p>If you have questions, contact us at: <b>support@floorplanner.com</b></p>
+    <h4>6. User-Generated Content</h4>
+    <p>If you upload or share content (such as designs, feedback, or comments), you grant us a non-exclusive, worldwide, royalty-free license to use, display, and distribute that content in connection with our Services. You represent that you have the necessary rights to share such content. We may remove content that violates these Terms or applicable law.</p>
+<br>
+
+    <h4>7. Limitation of Liability</h4>
+    <p>We strive to provide accurate, reliable, and secure Services, but we do not guarantee uninterrupted or error-free operation. To the maximum extent permitted by law, Floor Planner is not responsible for:</p>
+    <ul>
+      <li>Losses or damages resulting from your use or inability to use our Services.</li>
+      <li>Errors, interruptions, or delays in service.</li>
+      <li>Any damages caused by third-party services or links provided through our platform.</li>
+    </ul>
+<br>
+
+    <h4>8. Third-Party Links</h4>
+    <p>Our Services may include links to third-party websites or services that we do not own or control. We are not responsible for their content, policies, or practices. You should review the terms and privacy policies of any third-party services you use.</p>
+<br>
+
+    <h4>9. Termination of Access</h4>
+    <p>We may suspend, restrict, or terminate your access to the Services at any time, without prior notice, if you violate these Terms or applicable laws. Upon termination, your right to use the Services immediately ceases.</p>
+<br>
+
+    <h4>10. Changes to Terms</h4>
+    <p>We may update or modify these Terms from time to time. The revised version will be posted here with the new "Last Updated" date. Continued use of the Services means you accept the updated Terms.</p>
+<br>
+
+    <h4>11. Governing Law</h4>
+    <p>These Terms shall be governed by and construed under the laws of <b>[Your Country/State]</b>. Any disputes shall fall under the exclusive jurisdiction of the courts in <b>[Your City/Region]</b>.</p>
+<br>
+
+    <h4>12. Contact</h4>
+    <p>If you have questions, concerns, or feedback regarding these Terms, contact us at:</p>
+    <p><b>Email:</b> support@floorplanner.com<br>
+       <b>Address:</b> Floor Planner</p>
 <br>
 
   </main>
