--- a/terms.html
+++ b/terms.html
@@ -24,7 +24,7 @@
 
     .content-page {
       background: #fff;
-      padding: 0.6em;
+      padding: 0.4em 0.8em;
     }
 
     .content-page p, 
@@ -113,7 +113,7 @@
 <br>
 
     <h4>11. Governing Law</h4>
-    <p>These Terms shall be governed by and construed under the laws of <b>[Your Country/State]</b>. Any disputes shall fall under the exclusive jurisdiction of the courts in <b>[Your City/Region]</b>.</p>
+    <p>These Terms shall be governed by and construed under the laws of <b>India</b>. Any disputes shall fall under the exclusive jurisdiction of the courts in <b>Amravati</b>.</p>
 <br>
 
     <h4>12. Contact</h4>
