--- a/privacy.html
+++ b/privacy.html
@@ -24,7 +24,7 @@
 
     .content-page {
       background: #fff;
-      padding: 0.6em;
+      padding: 0.4em 0.8em;
     }
 
     .content-page p, 
