--- a/privacy.html
+++ b/privacy.html
@@ -24,7 +24,7 @@
 
     .content-page {
       background: #fff;
-      padding: 0.4em 0.8em;
+      padding: 0.6em;
     }
 
     .content-page p, 
@@ -51,7 +51,7 @@
     <p><strong>Last Updated:</strong> 20 Aug 2025</p>
 
     <p>At <b>Floor Planner</b>, your privacy is of the highest importance to us. This Privacy Policy describes the types of information we collect, how we use it, the measures we take to protect it, and your rights regarding your personal data. By using our services, you agree to the practices described in this policy.</p>
-<br>
+<br><br>
 
     <h4>1. Information We Collect</h4>
     <p>We collect different types of information to provide and improve our services:</p>
@@ -60,7 +60,7 @@
       <li><b>Usage Information</b>: pages you visit, features you use, time and duration of visits, IP address, browser type, and device details.</li>
       <li><b>Cookies & Tracking</b>: to improve performance, store preferences, and analyze usage patterns. (You may disable cookies in your browser, but some features may not work properly.)</li>
     </ul>
-<br>
+<br><br>
 
     <h4>2. How We Use Information</h4>
     <p>We use the collected data for purposes such as:</p>
@@ -72,7 +72,7 @@
       <li><b>Communication</b>: sending updates, responding to inquiries, and providing customer support.</li>
       <li><b>Legal Compliance</b>: meeting obligations under law and regulations.</li>
     </ul>
-<br>
+<br><br>
 
     <h4>3. Sharing of Information</h4>
     <p>We respect your privacy and do not sell your personal data. However, we may share information in the following cases:</p>
@@ -82,15 +82,15 @@
       <li><b>Business Transfers</b>: in mergers, acquisitions, or sales of assets.</li>
       <li><b>Consent</b>: with your explicit permission.</li>
     </ul>
-<br>
+<br><br>
 
     <h4>4. Data Security</h4>
     <p>We use industry-standard measures such as encryption, secure servers, and regular monitoring to safeguard your information. While we strive to protect your data, no system is completely secure, and we cannot guarantee absolute protection.</p>
-<br>
+<br><br>
 
     <h4>5. Data Retention</h4>
     <p>We retain personal data only for as long as necessary to fulfill the purposes described in this Privacy Policy, unless required otherwise by law. Data no longer needed is securely deleted or anonymized.</p>
-<br>
+<br><br>
 
     <h4>6. Your Rights</h4>
     <p>Depending on your location, you may have rights including:</p>
@@ -102,25 +102,25 @@
       <li>Request data portability in a structured format.</li>
     </ul>
     <p>To exercise these rights, contact us using the details below.</p>
-<br>
+<br><br>
 
     <h4>7. Children’s Privacy</h4>
     <p>Our services are not directed to children under 13. We do not knowingly collect data from children. If we discover a child’s data has been provided, we will delete it immediately.</p>
-<br>
+<br><br>
 
     <h4>8. International Data Transfers</h4>
     <p>If you access our services from outside our hosting country, your data may be transferred internationally in compliance with applicable data protection laws.</p>
-<br>
+<br><br>
 
     <h4>9. Updates to This Policy</h4>
     <p>We may update this Privacy Policy from time to time. Any changes will be posted on this page with the updated “Last Updated” date. Significant changes may also be communicated via email or notifications.</p>
-<br>
+<br><br>
 
     <h4>10. Contact</h4>
     <p>If you have questions or concerns regarding this Privacy Policy or our data practices, contact us at:</p>
     <p><b>Email:</b> privacy@floorplanner.com<br>
        <b>Address:</b> Floor Planner</p>
-<br>
+<br><br>
 
   </main>
 
