--- a/terms.html
+++ b/terms.html
@@ -9,7 +9,7 @@
   <style>
     body {
       margin: 0;
-      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+      font-family: sans-serif;
       background: #fff;
       color: #333;
     }
@@ -18,13 +18,13 @@
       background: transparent;
       border: none;
       color: #fff;
-      font-size: 1.2rem;
+      font-size: 1rem;
       cursor: pointer;
     }
 
     .content-page {
       background: #fff;
-      padding: 0.4em 0.8em;
+      padding: 0.6em;
     }
 
     .content-page p, 
@@ -51,18 +51,18 @@
     <p><strong>Last Updated:</strong> 20 Aug 2025</p>
 
     <p>Welcome to <b>Floor Planner</b> (“we,” “our,” “us”). By accessing, browsing, or using our website, application, or related services (collectively, the “Services”), you agree to be bound by these Terms of Use. Please read them carefully, as they affect your legal rights and obligations.</p>
-<br>
+<br><br>
 
     <h4>1. Acceptance of Terms</h4>
     <p>By creating an account, accessing our Services, or otherwise using Floor Planner, you acknowledge that you have read, understood, and agreed to these Terms. If you do not agree, you may not access or use our Services.</p>
-<br>
+<br><br>
 
     <h4>2. Eligibility</h4>
     <ul>
       <li>You must be at least 13 years old (or the minimum legal age in your jurisdiction) to use our Services.</li>
       <li>If you are using the Services on behalf of an organization or entity, you confirm that you are authorized to accept these Terms on its behalf.</li>
     </ul>
-<br>
+<br><br>
 
     <h4>3. Use of Services</h4>
     <p>When using Floor Planner, you agree to:</p>
@@ -73,7 +73,7 @@
       <li>Not disrupt or interfere with the proper functioning of our Services.</li>
     </ul>
     <p>We reserve the right to suspend or terminate accounts that violate these rules.</p>
-<br>
+<br><br>
 
     <h4>4. Account Responsibilities</h4>
     <ul>
@@ -81,15 +81,15 @@
       <li>You agree to notify us immediately if you suspect any unauthorized use of your account.</li>
       <li>We are not liable for any loss or damages caused by your failure to secure your account.</li>
     </ul>
-<br>
+<br><br>
 
     <h4>5. Intellectual Property</h4>
     <p>All content, design, software, and materials provided through Floor Planner are the property of Floor Planner or its licensors. This includes text, graphics, images, software code, layouts, and trademarks. Unauthorized use, reproduction, or distribution is prohibited.</p>
-<br>
+<br><br>
 
     <h4>6. User-Generated Content</h4>
     <p>If you upload or share content (such as designs, feedback, or comments), you grant us a non-exclusive, worldwide, royalty-free license to use, display, and distribute that content in connection with our Services. You represent that you have the necessary rights to share such content. We may remove content that violates these Terms or applicable law.</p>
-<br>
+<br><br>
 
     <h4>7. Limitation of Liability</h4>
     <p>We strive to provide accurate, reliable, and secure Services, but we do not guarantee uninterrupted or error-free operation. To the maximum extent permitted by law, Floor Planner is not responsible for:</p>
@@ -98,29 +98,29 @@
       <li>Errors, interruptions, or delays in service.</li>
       <li>Any damages caused by third-party services or links provided through our platform.</li>
     </ul>
-<br>
+<br><br>
 
     <h4>8. Third-Party Links</h4>
     <p>Our Services may include links to third-party websites or services that we do not own or control. We are not responsible for their content, policies, or practices. You should review the terms and privacy policies of any third-party services you use.</p>
-<br>
+<br><br>
 
     <h4>9. Termination of Access</h4>
     <p>We may suspend, restrict, or terminate your access to the Services at any time, without prior notice, if you violate these Terms or applicable laws. Upon termination, your right to use the Services immediately ceases.</p>
-<br>
+<br><br>
 
     <h4>10. Changes to Terms</h4>
     <p>We may update or modify these Terms from time to time. The revised version will be posted here with the new "Last Updated" date. Continued use of the Services means you accept the updated Terms.</p>
-<br>
+<br><br>
 
     <h4>11. Governing Law</h4>
     <p>These Terms shall be governed by and construed under the laws of <b>India</b>. Any disputes shall fall under the exclusive jurisdiction of the courts in <b>Amravati</b>.</p>
-<br>
+<br><br>
 
     <h4>12. Contact</h4>
     <p>If you have questions, concerns, or feedback regarding these Terms, contact us at:</p>
     <p><b>Email:</b> support@floorplanner.com<br>
        <b>Address:</b> Floor Planner</p>
-<br>
+<br><br>
 
   </main>
 
