--- a/terms.html
+++ b/terms.html
@@ -25,6 +25,8 @@
     .content-page {
       background: #fff;
       padding: 0.6em;
+      color: #444;
+      font-size: 14px;
     }
 
     .content-page p, 
